<?xml version="1.0"?>
<package>
  <name>robotiq_hande_gripper_description</name>
  <version>0.0.1</version>
  <description>
    3D models of the Hand-E gripper for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="ahcorde@erlerobotics.com">Alejandro Hernandez</author>
  <maintainer email="ahcorde@erlerobotics.com">Alejandro Hernandez</maintainer>
  <url type="repository">https://github.com/erlerobot/mara</url>
  <url type="bugtracker">https://github.com/erlerobot/mara/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
